tests/src/frontend/typechecking/invalid/join_into_readonly_3.sk
base class P() {
  children =
  | X
  | Y
}
mutable class Co<+T>(mutable v: T)

fun no(): void {
  _ = if (true) mutable Co(X()) else mutable Co(Y());
  void
}
